Update Project and Add news Functions

--- a/index.html
+++ b/index.html
@@ -4,22 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>IO Script - V1</title>
 </head>
 <body>
-  <!--<script type="text/javascript">
-    const Work = new Worker("assets/js/work.js");
-  </script>
-  <script type="module" charset="utf-8">
-    import {modulo} from "./assets/js/modulo.js";
-    console.log(modulo);
-  </script>-->
   <script type="text/io-script" src="assets/js/app.io.js"></script>
   <script src="assets/js/io-script.js?version=1.0.0" charset="utf-8"></script>
   <script type="text/javascript">
     // Inicia o Compilador
     new IoScript({
-      debug: true // Ativa modo Debug
+      debug: true, // Ativa modo Debug
+      protected: false, // False e Default para não acessar o escopo
+      pretty: true // Deixa o codigo mais Limpo para visualizaçao
     });
   </script>
 </body>
